[gd_scene load_steps=10 format=3 uid="uid://d243sqiodghwd"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_eok4o"]
[ext_resource type="Script" path="res://scripts/state_machines/state_machine.gd" id="2_y7nqv"]
[ext_resource type="Script" path="res://scripts/state_machines/item/idle_state.gd" id="3_8ojxu"]
[ext_resource type="Script" path="res://scripts/state_machines/item/dragged_state.gd" id="4_a4x7h"]
[ext_resource type="Script" path="res://scripts/state_machines/item/placed_movable_state.gd" id="6_gg8ej"]
[ext_resource type="Script" path="res://scripts/state_machines/item/placed_immovable_state.gd" id="6_ilons"]

[sub_resource type="Gradient" id="Gradient_w13t2"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3208d"]
gradient = SubResource("Gradient_w13t2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2xuv"]
size = Vector2(64, 64)

[node name="Item" type="Node2D" node_paths=PackedStringArray("state_machine", "placed_immovable_state") groups=["items"]]
script = ExtResource("1_eok4o")
state_machine = NodePath("StateMachine")
placed_immovable_state = NodePath("StateMachine/PlacedImmovableState")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_y7nqv")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("area_2d", "dragged_state")]
script = ExtResource("3_8ojxu")
area_2d = NodePath("../../Area2D")
dragged_state = NodePath("../DraggedState")

[node name="DraggedState" type="Node" parent="StateMachine" node_paths=PackedStringArray("area_2d", "placed_movable_state", "idle_state")]
script = ExtResource("4_a4x7h")
area_2d = NodePath("../../Area2D")
placed_movable_state = NodePath("../PlacedMovableState")
idle_state = NodePath("../IdleState")

[node name="PlacedImmovableState" type="Node" parent="StateMachine"]
script = ExtResource("6_ilons")

[node name="PlacedMovableState" type="Node" parent="StateMachine" node_paths=PackedStringArray("placed_immovable_state", "area_2d", "dragged_state")]
script = ExtResource("6_gg8ej")
placed_immovable_state = NodePath("../PlacedImmovableState")
area_2d = NodePath("../../Area2D")
dragged_state = NodePath("../DraggedState")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 15
scale = Vector2(0.25, 64.5)
texture = SubResource("GradientTexture1D_3208d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_o2xuv")
